update github actions and update deprecations